--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage" : "https://nickrking.com",
+  "homepage": "https://nickrking.com",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
@@ -13,6 +13,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-fade-in": "^1.1.0",
+    "react-ga": "^3.1.2",
     "react-icons": "^3.11.0",
     "react-loading": "^2.0.3",
     "react-lottie": "^1.2.3",
