--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-loading": "^2.0.3",
     "react-lottie": "^1.2.3",
     "react-reveal": "^1.2.2",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^3.4.4",
     "react-scroll": "^1.8.1"
   },
   "scripts": {
